# libft

./: CMakeLists.txt  ft_atoi.c  ft_bzero.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strrchr.c  ft_strstr.c  libft.h  main  main.c  memccpy.c
